// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert 快照测试 children测试 1`] = `
.c1 {
  display: block;
  font-size: 0.875rem;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 8px 34px 8px 15px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #dfe3f4;
  border: 1px solid #ccd1eb;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

<div
  className="c0 sinoui-alert sinoui-alert--info"
  role="alert"
  type="info"
>
  <span
    className="c1 sinoui-alert-message"
    data-testid="alertMessage"
  >
    提示信息
  </span>
  <span
    className="c2 sinoui-alert-description"
  />
</div>
`;

exports[`Alert 快照测试 不同类型的警告提示 1`] = `
Array [
  .c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 8px 15px 8px 37px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #e2f2e3;
  border: 1px solid #cfead0;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c4 {
  display: block;
  font-size: 16px;
  margin-right: 8px;
  position: absolute;
  top: 8px;
  left: 16px;
  color: #388e3c;
}

<div
    className="c0 sinoui-alert sinoui-alert--success sinoui-alert--show-icon"
    role="alert"
    type="success"
  >
    <span
      className="c1 sinoui-alert-message"
      data-testid="alertMessage"
    >
      提示信息
    </span>
    <span
      className="c2 sinoui-alert-description"
    />
    <svg
      aria-hidden="true"
      className="c3 c4 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c4 sinoui-alert-icon"
      data-testid="CheckCircleIcon"
      focusable="false"
      role="presentation"
      size={24}
      type="success"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>,
  .c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 8px 15px 8px 37px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #dfe3f4;
  border: 1px solid #ccd1eb;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c4 {
  display: block;
  font-size: 16px;
  margin-right: 8px;
  position: absolute;
  top: 8px;
  left: 16px;
  color: #303f9f;
}

<div
    className="c0 sinoui-alert sinoui-alert--info sinoui-alert--show-icon"
    role="alert"
    type="info"
  >
    <span
      className="c1 sinoui-alert-message"
      data-testid="alertMessage"
    >
      提示信息
    </span>
    <span
      className="c2 sinoui-alert-description"
    />
    <svg
      aria-hidden="true"
      className="c3 c4 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c4 sinoui-alert-icon"
      data-testid="InfoIcon"
      focusable="false"
      role="presentation"
      size={24}
      type="primary"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
  </div>,
  .c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 8px 15px 8px 37px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #ffefd6;
  border: 1px solid #ffe4bb;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c4 {
  display: block;
  font-size: 16px;
  margin-right: 8px;
  position: absolute;
  top: 8px;
  left: 16px;
  color: #f57c00;
}

<div
    className="c0 sinoui-alert sinoui-alert--warning sinoui-alert--show-icon"
    role="alert"
    type="warning"
  >
    <span
      className="c1 sinoui-alert-message"
      data-testid="alertMessage"
    >
      提示信息
    </span>
    <span
      className="c2 sinoui-alert-description"
    />
    <svg
      aria-hidden="true"
      className="c3 c4 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c4 sinoui-alert-icon"
      data-testid="WarningOutlinedIcon"
      focusable="false"
      role="presentation"
      size={24}
      type="warning"
      viewBox="0 0 24 24"
    >
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>,
  .c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 8px 15px 8px 37px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #fde1df;
  border: 1px solid #f5caca;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c4 {
  display: block;
  font-size: 16px;
  margin-right: 8px;
  position: absolute;
  top: 8px;
  left: 16px;
  color: #d32f2f;
}

<div
    className="c0 sinoui-alert sinoui-alert--error sinoui-alert--show-icon"
    role="alert"
    type="error"
  >
    <span
      className="c1 sinoui-alert-message"
      data-testid="alertMessage"
    >
      提示信息
    </span>
    <span
      className="c2 sinoui-alert-description"
    />
    <svg
      aria-hidden="true"
      className="c3 c4 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c4 sinoui-alert-icon"
      data-testid="ErrorIcon"
      focusable="false"
      role="presentation"
      size={24}
      type="error"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
  </div>,
]
`;

exports[`Alert 快照测试 不同类型辅助性文字介绍和辅助图标 1`] = `
Array [
  .c6 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 1rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 15px 34px 15px 64px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #dfe3f4;
  border: 1px solid #ccd1eb;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3::-moz-focus-inner {
  border-style: none;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-sizing: border-box;
  color: rgba(0,0,0,0.6);
}

.c4:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 > .sinoui-icon-button__ripple-layout {
  left: 0px;
  top: 0px;
  width: 48px;
  height: 48px;
}

.c4 > .sinoui-icon-button__ripple-layout > .sinoui-icon-button__ripple {
  width: 48px;
  height: 48px;
}

.c5 {
  position: absolute;
  top: 10px;
  right: 8px;
  color: rgba(0,0,0,0.6);
  width: 32px;
  height: 32px;
}

.c5 .sinoui-svg-icon {
  font-size: 16px;
}

.c5 .sinoui-alert-close__ripple {
  width: 32px;
  height: 32px;
}

.c5 .sinoui-alert-close__ripple-layout {
  width: 32px;
  height: 32px;
}

.c7 {
  display: block;
  font-size: 24px;
  margin-right: 8px;
  position: absolute;
  top: 13px;
  left: 24px;
  color: #303f9f;
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c4:hover {
    background-color: transparent;
  }
}

<div
    className="c0 sinoui-alert sinoui-alert--info sinoui-alert--show-description sinoui-alert--closable sinoui-alert--show-icon"
    role="alert"
    type="info"
  >
    <span
      className="c1 sinoui-alert-message"
      data-testid="alertMessage"
    >
      提示信息
    </span>
    <span
      className="c2 sinoui-alert-description"
    >
      辅助性文字介绍
    </span>
    <button
      aria-label="Close"
      className="c3 sinoui-base-button c4 sinoui-icon-button c5 sinoui-alert-close-button"
      color="textSecondary"
      data-testid="closeButton"
      onClick={[Function]}
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="c6 sinoui-svg-icon"
        data-testid="CloseOutlinedIcon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        />
      </svg>
    </button>
    <svg
      aria-hidden="true"
      className="c6 c7 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c7 sinoui-alert-icon"
      data-testid="InfoOutlinedIcon"
      focusable="false"
      role="presentation"
      size={24}
      type="primary"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>,
  .c6 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 1rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 15px 34px 15px 64px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #e2f2e3;
  border: 1px solid #cfead0;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3::-moz-focus-inner {
  border-style: none;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-sizing: border-box;
  color: rgba(0,0,0,0.6);
}

.c4:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 > .sinoui-icon-button__ripple-layout {
  left: 0px;
  top: 0px;
  width: 48px;
  height: 48px;
}

.c4 > .sinoui-icon-button__ripple-layout > .sinoui-icon-button__ripple {
  width: 48px;
  height: 48px;
}

.c5 {
  position: absolute;
  top: 10px;
  right: 8px;
  color: rgba(0,0,0,0.6);
  width: 32px;
  height: 32px;
}

.c5 .sinoui-svg-icon {
  font-size: 16px;
}

.c5 .sinoui-alert-close__ripple {
  width: 32px;
  height: 32px;
}

.c5 .sinoui-alert-close__ripple-layout {
  width: 32px;
  height: 32px;
}

.c7 {
  display: block;
  font-size: 24px;
  margin-right: 8px;
  position: absolute;
  top: 13px;
  left: 24px;
  color: #388e3c;
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c4:hover {
    background-color: transparent;
  }
}

<div
    className="c0 sinoui-alert sinoui-alert--success sinoui-alert--show-description sinoui-alert--closable sinoui-alert--show-icon"
    role="alert"
    type="success"
  >
    <span
      className="c1 sinoui-alert-message"
      data-testid="alertMessage"
    >
      提示信息
    </span>
    <span
      className="c2 sinoui-alert-description"
    >
      辅助性文字介绍
    </span>
    <button
      aria-label="Close"
      className="c3 sinoui-base-button c4 sinoui-icon-button c5 sinoui-alert-close-button"
      color="textSecondary"
      data-testid="closeButton"
      onClick={[Function]}
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="c6 sinoui-svg-icon"
        data-testid="CloseOutlinedIcon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        />
      </svg>
    </button>
    <svg
      aria-hidden="true"
      className="c6 c7 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c7 sinoui-alert-icon"
      data-testid="CheckCircleOutlineIcon"
      focusable="false"
      role="presentation"
      size={24}
      type="success"
      viewBox="0 0 24 24"
    >
      <path
        d="M16.59 7.58L10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>,
  .c6 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 1rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 15px 34px 15px 64px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #ffefd6;
  border: 1px solid #ffe4bb;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3::-moz-focus-inner {
  border-style: none;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-sizing: border-box;
  color: rgba(0,0,0,0.6);
}

.c4:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 > .sinoui-icon-button__ripple-layout {
  left: 0px;
  top: 0px;
  width: 48px;
  height: 48px;
}

.c4 > .sinoui-icon-button__ripple-layout > .sinoui-icon-button__ripple {
  width: 48px;
  height: 48px;
}

.c5 {
  position: absolute;
  top: 10px;
  right: 8px;
  color: rgba(0,0,0,0.6);
  width: 32px;
  height: 32px;
}

.c5 .sinoui-svg-icon {
  font-size: 16px;
}

.c5 .sinoui-alert-close__ripple {
  width: 32px;
  height: 32px;
}

.c5 .sinoui-alert-close__ripple-layout {
  width: 32px;
  height: 32px;
}

.c7 {
  display: block;
  font-size: 24px;
  margin-right: 8px;
  position: absolute;
  top: 13px;
  left: 24px;
  color: #f57c00;
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c4:hover {
    background-color: transparent;
  }
}

<div
    className="c0 sinoui-alert sinoui-alert--warning sinoui-alert--show-description sinoui-alert--closable sinoui-alert--show-icon"
    role="alert"
    type="warning"
  >
    <span
      className="c1 sinoui-alert-message"
      data-testid="alertMessage"
    >
      提示信息
    </span>
    <span
      className="c2 sinoui-alert-description"
    >
      辅助性文字介绍
    </span>
    <button
      aria-label="Close"
      className="c3 sinoui-base-button c4 sinoui-icon-button c5 sinoui-alert-close-button"
      color="textSecondary"
      data-testid="closeButton"
      onClick={[Function]}
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="c6 sinoui-svg-icon"
        data-testid="CloseOutlinedIcon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        />
      </svg>
    </button>
    <svg
      aria-hidden="true"
      className="c6 c7 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c7 sinoui-alert-icon"
      data-testid="ReportProblemOutlinedIcon"
      focusable="false"
      role="presentation"
      size={24}
      type="warning"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
      />
    </svg>
  </div>,
  .c6 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 1rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 15px 34px 15px 64px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #fde1df;
  border: 1px solid #f5caca;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3::-moz-focus-inner {
  border-style: none;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-sizing: border-box;
  color: rgba(0,0,0,0.6);
}

.c4:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 > .sinoui-icon-button__ripple-layout {
  left: 0px;
  top: 0px;
  width: 48px;
  height: 48px;
}

.c4 > .sinoui-icon-button__ripple-layout > .sinoui-icon-button__ripple {
  width: 48px;
  height: 48px;
}

.c5 {
  position: absolute;
  top: 10px;
  right: 8px;
  color: rgba(0,0,0,0.6);
  width: 32px;
  height: 32px;
}

.c5 .sinoui-svg-icon {
  font-size: 16px;
}

.c5 .sinoui-alert-close__ripple {
  width: 32px;
  height: 32px;
}

.c5 .sinoui-alert-close__ripple-layout {
  width: 32px;
  height: 32px;
}

.c7 {
  display: block;
  font-size: 24px;
  margin-right: 8px;
  position: absolute;
  top: 13px;
  left: 24px;
  color: #d32f2f;
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c4:hover {
    background-color: transparent;
  }
}

<div
    className="c0 sinoui-alert sinoui-alert--error sinoui-alert--show-description sinoui-alert--closable sinoui-alert--show-icon"
    role="alert"
    type="error"
  >
    <span
      className="c1 sinoui-alert-message"
      data-testid="alertMessage"
    >
      提示信息
    </span>
    <span
      className="c2 sinoui-alert-description"
    >
      辅助性文字介绍
    </span>
    <button
      aria-label="Close"
      className="c3 sinoui-base-button c4 sinoui-icon-button c5 sinoui-alert-close-button"
      color="textSecondary"
      data-testid="closeButton"
      onClick={[Function]}
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="c6 sinoui-svg-icon"
        data-testid="CloseOutlinedIcon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        />
      </svg>
    </button>
    <svg
      aria-hidden="true"
      className="c6 c7 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c7 sinoui-alert-icon"
      data-testid="ErrorOutlineIcon"
      focusable="false"
      role="presentation"
      size={24}
      type="error"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>,
]
`;

exports[`Alert 快照测试 渲染Alert 1`] = `
.c1 {
  display: block;
  font-size: 0.875rem;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 8px 34px 8px 15px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #dfe3f4;
  border: 1px solid #ccd1eb;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

<div
  className="c0 sinoui-alert sinoui-alert--info"
  role="alert"
  type="info"
>
  <span
    className="c1 sinoui-alert-message"
    data-testid="alertMessage"
  >
    提示信息
  </span>
  <span
    className="c2 sinoui-alert-description"
  />
</div>
`;

exports[`Alert 快照测试 设置显示关闭按钮 1`] = `
.c6 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 8px 34px 8px 15px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #dfe3f4;
  border: 1px solid #ccd1eb;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3::-moz-focus-inner {
  border-style: none;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-sizing: border-box;
  color: rgba(0,0,0,0.6);
}

.c4:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 > .sinoui-icon-button__ripple-layout {
  left: 0px;
  top: 0px;
  width: 48px;
  height: 48px;
}

.c4 > .sinoui-icon-button__ripple-layout > .sinoui-icon-button__ripple {
  width: 48px;
  height: 48px;
}

.c5 {
  position: absolute;
  top: 2px;
  right: 8px;
  color: rgba(0,0,0,0.6);
  width: 32px;
  height: 32px;
}

.c5 .sinoui-svg-icon {
  font-size: 14px;
}

.c5 .sinoui-alert-close__ripple {
  width: 32px;
  height: 32px;
}

.c5 .sinoui-alert-close__ripple-layout {
  width: 32px;
  height: 32px;
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c4:hover {
    background-color: transparent;
  }
}

<div
  className="c0 sinoui-alert sinoui-alert--info sinoui-alert--closable"
  role="alert"
  type="info"
>
  <span
    className="c1 sinoui-alert-message"
    data-testid="alertMessage"
  >
    提示信息
  </span>
  <span
    className="c2 sinoui-alert-description"
  />
  <button
    aria-label="Close"
    className="c3 sinoui-base-button c4 sinoui-icon-button c5 sinoui-alert-close-button"
    color="textSecondary"
    data-testid="closeButton"
    onClick={[Function]}
    role="button"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="c6 sinoui-svg-icon"
      data-testid="CloseOutlinedIcon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
      />
    </svg>
  </button>
</div>
`;

exports[`Alert 快照测试 设置显示辅助图标 1`] = `
.c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 8px 15px 8px 37px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #dfe3f4;
  border: 1px solid #ccd1eb;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c4 {
  display: block;
  font-size: 16px;
  margin-right: 8px;
  position: absolute;
  top: 8px;
  left: 16px;
  color: #303f9f;
}

<div
  className="c0 sinoui-alert sinoui-alert--info sinoui-alert--show-icon"
  role="alert"
  type="info"
>
  <span
    className="c1 sinoui-alert-message"
    data-testid="alertMessage"
  >
    提示信息
  </span>
  <span
    className="c2 sinoui-alert-description"
  />
  <svg
    aria-hidden="true"
    className="c3 c4 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c4 sinoui-alert-icon"
    data-testid="InfoIcon"
    focusable="false"
    role="presentation"
    size={24}
    type="primary"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
    />
  </svg>
</div>
`;

exports[`Alert 快照测试 设置辅助性文字介绍 1`] = `
.c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 1rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 15px 15px 15px 64px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #dfe3f4;
  border: 1px solid #ccd1eb;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c4 {
  display: block;
  font-size: 24px;
  margin-right: 8px;
  position: absolute;
  top: 13px;
  left: 24px;
  color: #303f9f;
}

<div
  className="c0 sinoui-alert sinoui-alert--info sinoui-alert--show-description sinoui-alert--show-icon"
  role="alert"
  type="info"
>
  <span
    className="c1 sinoui-alert-message"
    data-testid="alertMessage"
  >
    提示信息
  </span>
  <span
    className="c2 sinoui-alert-description"
  >
    辅助性文字介绍
  </span>
  <svg
    aria-hidden="true"
    className="c3 c4 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c4 sinoui-alert-icon"
    data-testid="InfoOutlinedIcon"
    focusable="false"
    role="presentation"
    size={24}
    type="primary"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
    />
  </svg>
</div>
`;

exports[`Alert 快照测试 辅助性文字介绍和辅助图标 1`] = `
.c3 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c1 {
  display: block;
  font-size: 1rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.87);
}

.c2 {
  font-size: 0.875rem;
  display: block;
  line-height: 1.5rem;
  color: rgba(0,0,0,0.6);
}

.c0 {
  position: relative;
  padding: 15px 15px 15px 64px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #dfe3f4;
  border: 1px solid #ccd1eb;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c4 {
  display: block;
  font-size: 24px;
  margin-right: 8px;
  position: absolute;
  top: 13px;
  left: 24px;
  color: #303f9f;
}

<div
  className="c0 sinoui-alert sinoui-alert--info sinoui-alert--show-description sinoui-alert--show-icon"
  role="alert"
  type="info"
>
  <span
    className="c1 sinoui-alert-message"
    data-testid="alertMessage"
  >
    提示信息
  </span>
  <span
    className="c2 sinoui-alert-description"
  >
    辅助性文字介绍
  </span>
  <svg
    aria-hidden="true"
    className="c3 c4 sinoui-alert-icon sinoui-svg-icon Alert__IconTypeWrapper-xebh27-0 c4 sinoui-alert-icon"
    data-testid="InfoOutlinedIcon"
    focusable="false"
    role="presentation"
    size={24}
    type="primary"
    viewBox="0 0 24 24"
  >
    <path
      d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
    />
  </svg>
</div>
`;
